
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_9__ TYPE_2__ ;
typedef struct TYPE_8__ TYPE_1__ ;


struct TYPE_8__ {int *** light_maps; int *** block_maps; scalar_t__ q; scalar_t__ p; } ;
typedef TYPE_1__ WorkerItem ;
struct TYPE_9__ {scalar_t__ dirty; int lights; int map; scalar_t__ q; scalar_t__ p; } ;
typedef TYPE_2__ Chunk ;


 int compute_chunk (TYPE_1__*) ;
 TYPE_2__* find_chunk (scalar_t__,scalar_t__) ;
 int generate_chunk (TYPE_2__*,TYPE_1__*) ;

void gen_chunk_buffer(Chunk *chunk) {
    WorkerItem _item;
    WorkerItem *item = &_item;
    item->p = chunk->p;
    item->q = chunk->q;
    for (int dp = -1; dp <= 1; dp++) {
        for (int dq = -1; dq <= 1; dq++) {
            Chunk *other = chunk;
            if (dp || dq) {
                other = find_chunk(chunk->p + dp, chunk->q + dq);
            }
            if (other) {
                item->block_maps[dp + 1][dq + 1] = &other->map;
                item->light_maps[dp + 1][dq + 1] = &other->lights;
            }
            else {
                item->block_maps[dp + 1][dq + 1] = 0;
                item->light_maps[dp + 1][dq + 1] = 0;
            }
        }
    }
    compute_chunk(item);
    generate_chunk(chunk, item);
    chunk->dirty = 0;
}
